app/src/ui/pulse/sidebar/PulseSidebar.module.scss
@import "src/theme/base";
@import "src/ui/typography/variables";

@mixin visible($width) {
  width: $width;
  height: 100%;
  visibility: visible;
  opacity: 1;
}

.pulse-sidebar {
  &__layout {
    @extend .z-depth-1-half;

    @include atLargeTablet {
      @include visible($sidebar-width);
      position: relative;
    }
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    z-index: $z-index-navigation;
    width: 0;
    height: 0;
    overflow: hidden;
    background-color: var(--color-background);
    visibility: hidden;
    opacity: 0;
    transition: all $duration-default $ease-in-fast $duration-none;

    &--inner {
      @include atLargeTablet {
        width: $sidebar-width-open;
      }
      display: flex;
      flex: 1 1 auto;
      flex-direction: column;
      max-width: $sidebar-width-mobile-open;
    }
  }

  &__overlay {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: $z-index-modal;
    display: none;
    width: 100%;
    height: 100%;
    background-color: var(--color-black);
    opacity: $opacity-mid;
  }

  &__content {
    display: flex;
    flex: 1 1 0;
    flex-direction: column;
    margin-bottom: auto;
    overflow-x: hidden;
    overflow-y: auto;
  }

  &__header {
    @include atLargeTablet {
      > a {
        padding-left: 8px;
      }
    }
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: $space-ml $space-default;
    transition: padding $duration-default $ease-in-fast $duration-none;

    svg {
      height: 33px;
      color: var(--color-typography-text);
    }

    &--exit {
      @include atLargeTablet {
        display: none;
      }
      padding-bottom: $space-s;
      font-size: $font-size-headline-2;
      color: var(--color-typography-text);
    }
  }

  &__item {
    @include atLargeTablet {
      max-width: 100%;
    }
    display: flex;
    flex-direction: column;
    flex-shrink: 0;
    max-width: 90%;
    padding: $space-xs $space-default;
    cursor: pointer;

    &--link {
      display: flex;
      align-items: center;
      border-radius: $border-radius-medium;
      padding: $space-default;
      text-align: left;
      text-decoration: none;

      &:active,
      &:hover {
        text-decoration: none;
        background-image: linear-gradient(
          to right,
          var(--color-secondary),
          var(--color-secondary-shade-mid),
          var(--color-secondary-shade-low)
        );

        > p,
        span {
          color: var(--color-black);
        }
      }

      p {
        font-weight: $font-weight-bold;
        color: var(--color-typography-text);
        opacity: 0;
      }

      span {
        color: var(--color-dark-3);
      }
    }

    &--pill {
      @include atLargeTablet {
        display: none;
      }
      display: block;
      padding: 0 $space-default $space-default;
    }

    &--icon {
      margin-right: $space-m;
    }
  }

  &__divider {
    padding: $space-default ($space-xl / 2);

    &--bar {
      width: 16px;
      height: 1px;
      background-color: var(--color-sidebar-divider);
    }
  }

  &__footer {
    @include atLargeTablet {
      right: 50%;
    }
    position: absolute;
    right: 70%;
    bottom: 5%;
    transform: translate(50%);

    > :nth-child(1) {
      transition: transform $duration-default $ease-in-fast $duration-none;
    }
  }

  &--open {
    .pulse-sidebar__layout {
      @include atLargeTablet {
        width: $sidebar-width-open;
      }
      @include visible($sidebar-width-mobile-open);
      z-index: $z-index-modal;
    }

    .pulse-sidebar__overlay {
      @include atLargeTablet {
        display: none;
      }
      display: block;
    }

    .pulse-sidebar__header {
      padding-left: 24px;
    }

    .pulse-sidebar__item {
      display: flex;
      justify-content: left;

      &--link {
        p {
          opacity: 1;
        }
      }
    }

    .pulse-sidebar__divider {
      &--bar {
        width: 100%;
      }
    }

    .pulse-sidebar__footer {
      > :nth-child(1) {
        transform: rotate(90deg);
      }
    }
  }
}

